// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner Snapshot Tests matches snapshot with centered 1`] = `
<div>
  <div
    class="smolitux-spinner-container smolitux-spinner-container--centered"
    role="status"
  >
    <div
      aria-hidden="true"
      class="smolitux-spinner smolitux-spinner--md smolitux-spinner--border smolitux-spinner--primary"
    />
    <span
      class="smolitux-spinner-sr-only"
    >
      Wird geladen...
    </span>
  </div>
</div>
`;

exports[`Spinner Snapshot Tests matches snapshot with color="success" 1`] = `
<div>
  <div
    class="smolitux-spinner-container"
    role="status"
  >
    <div
      aria-hidden="true"
      class="smolitux-spinner smolitux-spinner--md smolitux-spinner--border smolitux-spinner--success"
    />
    <span
      class="smolitux-spinner-sr-only"
    >
      Wird geladen...
    </span>
  </div>
</div>
`;

exports[`Spinner Snapshot Tests matches snapshot with default props 1`] = `
<div>
  <div
    class="smolitux-spinner-container"
    role="status"
  >
    <div
      aria-hidden="true"
      class="smolitux-spinner smolitux-spinner--md smolitux-spinner--border smolitux-spinner--primary"
    />
    <span
      class="smolitux-spinner-sr-only"
    >
      Wird geladen...
    </span>
  </div>
</div>
`;

exports[`Spinner Snapshot Tests matches snapshot with fullWidth 1`] = `
<div>
  <div
    class="smolitux-spinner-container smolitux-spinner-container--full-width"
    role="status"
  >
    <div
      aria-hidden="true"
      class="smolitux-spinner smolitux-spinner--md smolitux-spinner--border smolitux-spinner--primary"
    />
    <span
      class="smolitux-spinner-sr-only"
    >
      Wird geladen...
    </span>
  </div>
</div>
`;

exports[`Spinner Snapshot Tests matches snapshot with size="lg" 1`] = `
<div>
  <div
    class="smolitux-spinner-container"
    role="status"
  >
    <div
      aria-hidden="true"
      class="smolitux-spinner smolitux-spinner--lg smolitux-spinner--border smolitux-spinner--primary"
    />
    <span
      class="smolitux-spinner-sr-only"
    >
      Wird geladen...
    </span>
  </div>
</div>
`;

exports[`Spinner Snapshot Tests matches snapshot with text 1`] = `
<div>
  <div
    class="smolitux-spinner-container"
    role="status"
  >
    <div
      aria-hidden="true"
      class="smolitux-spinner smolitux-spinner--md smolitux-spinner--border smolitux-spinner--primary"
    />
    <div
      class="smolitux-spinner-text"
    >
      Bitte warten...
    </div>
    <span
      class="smolitux-spinner-sr-only"
    >
      Wird geladen...
    </span>
  </div>
</div>
`;

exports[`Spinner Snapshot Tests matches snapshot with variant="dots" 1`] = `
<div>
  <div
    class="smolitux-spinner-container"
    role="status"
  >
    <div
      aria-hidden="true"
      class="smolitux-spinner smolitux-spinner--md smolitux-spinner--dots smolitux-spinner--primary"
    >
      <div
        class="smolitux-spinner-dot"
      />
      <div
        class="smolitux-spinner-dot"
      />
      <div
        class="smolitux-spinner-dot"
      />
    </div>
    <span
      class="smolitux-spinner-sr-only"
    >
      Wird geladen...
    </span>
  </div>
</div>
`;

exports[`Spinner Snapshot Tests matches snapshot with variant="ring" 1`] = `
<div>
  <div
    class="smolitux-spinner-container"
    role="status"
  >
    <div
      aria-hidden="true"
      class="smolitux-spinner smolitux-spinner--md smolitux-spinner--ring smolitux-spinner--primary"
    >
      <div
        class="smolitux-spinner-ring"
      />
    </div>
    <span
      class="smolitux-spinner-sr-only"
    >
      Wird geladen...
    </span>
  </div>
</div>
`;
